csv issue fixed, layout issues

--- a/p3/public/css/dashboard.scss
+++ b/p3/public/css/dashboard.scss
@@ -38,7 +38,6 @@ nav {
 
 main {
   grid-area: main;
-  grid-row: 2/5;
 }
 
 footer {
